--- a/templates/report.html
+++ b/templates/report.html
@@ -11,11 +11,11 @@
 
     <nav class="navbar">
       <ul>
-        <li><a href="index.html"> Home</a></li>
-        <li><a href="about.html"> About</a></li>
-        <li><a href="availability.html"> Set Availability</a></li>
-        <li><a href="report.html"> Report</a></li>
-      </ul>
+        <li><a href="{{ url_for('home') }}">Home</a></li>
+        <li><a href="{{ url_for('about') }}">About</a></li>
+        <li><a href="{{ url_for('availability') }}">Set Availability</a></li>
+        <li><a href="{{ url_for('report') }}">Report</a></li>
+    </ul>
     </nav>
 
     <div class="container">
