--- a/templates/about.html
+++ b/templates/about.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About | Be My Buddy</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
   <body>
-    <h1>Be My Buddy</h1>
-
-    <nav class="navbar">
-      <ul>
-        <li><a href="index.html"> Home</a></li>
-        <li><a href="about.html"> About</a></li>
-        <li><a href="availability.html"> Set Availability</a></li>
-        <li><a href="report.html"> Report</a></li>
-      </ul>
-    </nav>
+    <header>
+      <nav class="navbar">
+        <h1>Be My Buddy</h1>
+        <ul>
+          <li><a href="{{ url_for('home') }}">Home</a></li>
+          <li><a href="{{ url_for('about') }}">About</a></li>
+          <li><a href="{{ url_for('availability') }}">Set Availability</a></li>
+          <li><a href="{{ url_for('report') }}">Report</a></li>
+        </ul>
+      </nav>
+    </header>
 
     <main>
       <h3>Welcome to Be My Buddy!</h3>
